
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int assert (int ) ;

int index_count_range (int left_len, const int *left, int right_len, const int *right, int min_pos, int max_pos) {
  if (min_pos == max_pos) {
    return 0;
  }
  assert (0);
  return 0;
}
